tests/invalid/exported_unify.err_exp2
Mercury/ints/exported_unify_helper_1.int:003: In clause for unification
Mercury/ints/exported_unify_helper_1.int:003:   predicate for type `foo':
Mercury/ints/exported_unify_helper_1.int:003:   error: undefined predicate
Mercury/ints/exported_unify_helper_1.int:003:   `exported_unify_helper_1.unify_foo'/2.
