tests/invalid/exported_unify.err_exp
exported_unify_helper_1.int:003: In clause for unification predicate for type
exported_unify_helper_1.int:003:   `foo':
exported_unify_helper_1.int:003:   error: undefined predicate
exported_unify_helper_1.int:003:   `exported_unify_helper_1.unify_foo'/2.
